# btrsync

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README-pypi.md  README.md  pyproject.toml  setup.cfg  setup.py
btrsync/: __init__.py  cli.py  cmdex.py  util.py
btrsync/btrfs/: __init__.py  cmd.py  parse.py
btrsync/sync/: __init__.py
btrsync/sync/root/: __init__.py  _exec.py  file.py  local.py  ssh.py
doc/: .gitignore  Makefile
doc/source/: api.rst  cli-usage.rst  conf.py  index.rst
doc/source/_static/: custom.css
doc/source/_templates/autosummary/: module.rst
test/: test_btrfs.py  test_btrfs_cmd.py  test_btrfs_parsers.py  test_btrfs_paths.py  test_cli.py  test_sync.py  test_util.py
